# time-whisper

./: README.md  package-lock.json  package.json  tailwind.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/db/: storage.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/app/: layout.tsx  page.tsx
src/app/components/: AutoStart.tsx  UsageChart.tsx
src/components/dashboard/: AutoStart.tsx  UsageChart.tsx  UsageTable.tsx
src/lib/: processName.ts
