[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.0-beta.9", features = [] }
tauri-plugin-shell = "2.0.0-beta.2"
tracing = "0.1"
tracing-subscriber = "0.3"
windows = { version = "0.48", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading", 
    "Win32_System_ProcessStatus",
    "Win32_Foundation",
    "Win32_Security" 
] }
tokio = { version = "1.0", features = ["full"] }
